@@ -197,7 +197,12 @@ static inline long pdo_attr_lval(zval *options, enum pdo_attribute_type option_n
 	zval **v;
 
 	if (options && SUCCESS == zend_hash_index_find(Z_ARRVAL_P(options), option_name, (void**)&v)) {
-		convert_to_long_ex(v);
+		if (Z_TYPE_PP(v) != IS_LONG) {
+			zval tmp = **v;
+			zval_copy_ctor(&tmp);
+			convert_to_long(&tmp);
+			return Z_LVAL(tmp);
+		}
 		return Z_LVAL_PP(v);
 	}
 	return defval;
@@ -207,7 +212,12 @@ static inline char *pdo_attr_strval(zval *options, enum pdo_attribute_type optio
 	zval **v;
 
 	if (options && SUCCESS == zend_hash_index_find(Z_ARRVAL_P(options), option_name, (void**)&v)) {
-		convert_to_string_ex(v);
+		if (Z_TYPE_PP(v) != IS_STRING) {
+			zval tmp = **v;
+			zval_copy_ctor(&tmp);
+			convert_to_string(&tmp);
+			return Z_STRVAL(tmp);
+		}
 		return estrndup(Z_STRVAL_PP(v), Z_STRLEN_PP(v));
 	}
 	return defval ? estrdup(defval) : NULL;
